<resources>
    <string name="app_name">Group_project</string>
    <string name="txtViewSplaceScreen">Group Project</string>
    <string name="log_in">LOG IN</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="submit">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="forget">Forget Password</string>
    <string name="phone">Contact Number</string>
    <string name="clg">Collage Name</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="register">Register</string>
    <string name="Abouus">About Us</string>
    <string name="mem">Members :</string>
    <string name="name1">Parth Agravat</string>
    <string name="name2">Harshiv Chag</string>
    <string name="name3">Ruturajsinh Gohil</string>
    <string name="collage">Collage :</string>
    <string name="clgname">R K University</string>
    <string name="department">Department :</string>
    <string name="departmentname">SOE CE/IT</string>
</resources>